# azure-nextflow-ui

./: Cargo.toml  README.md  Trunk.toml
.github/workflows/: reusable-azure-templates.yml
api/: Cargo.toml  README.md
api/src/: main.rs
api/src/app/: mod.rs  secrets.rs  state.rs  variables.rs
api/src/routes/: count.rs
api/src/services/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  types.rs
spa/: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  tailwind.config.js
spa/src/: env.rs  main.rs
spa/src/components/: auth.rs  buttons.rs  date_time.rs  dispatchers.rs  error_message.rs  error_status.rs  icons.rs  messages.rs  mod.rs  nav_bar.rs  progress_bar.rs  repositories.rs  workflows.rs
spa/src/controllers/: actions.rs  auth.rs  loaders.rs  mod.rs
spa/src/models/: app_state.rs  dispatchers.rs  mod.rs  params.rs  repositories.rs
spa/src/pages/: about_page.rs  home_page.rs  mod.rs  status_page.rs
spa/styles/: input.css
