[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos              = { version = "0.2", features = ["stable", "csr"] } 
reqwest             = { version = "0.11", features = ["json"] }
serde               = { version = "1.0" }
serde_json          = { version = "1.0" }
uuid                = { version = "1.3", features = ["v4", "js", "serde"] }
async-std           = { version = "1.12" }
openidconnect       = { version = "2" }
