[package]
name = "rust-leptos-spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.2", features = ["stable", "csr"] } 
leptos_router = { version = "0.2", features = ["stable", "csr"] } 
leptos_meta = { version = "0.2", features = ["stable", "csr"] } 
