[package]
name = "rust-leptos-spa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0", path = "../common" }

leptos          = { version = "0.2", features = ["stable", "csr"] } 
leptos_router   = { version = "0.2", features = ["stable", "csr"] } 
leptos_meta     = { version = "0.2", features = ["stable", "csr"] } 
reqwest         = { version = "0.11", features = ["json"] }
serde           = { version = "1.0" }
serde_json      = { version = "1.0" }
chrono          = { version = "0.4" }
strum           = { version = "0.24" }
strum_macros    = { version = "0.24" }
uuid            = { version = "1.3", features = ["v4", "js", "serde"] }
web-sys         = { version = "0.3", features = ["Storage", "UrlSearchParams"] }
anyhow          = { version = "1.0" }
openidconnect   = { version = "2" }
